Changed body so it reaches the ends of the page. TODO fix gap in mobile view right side. Fix padding on menu button

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,14 +1,14 @@
 body {
   background: #F5F5F5;
   font-family: "Open Sans", sans-serif;
-  text-align: center;  
+  text-align: center;    
 }
 
 .wrap {  
   height: auto;
   position: relative;  
   z-index: 200;
-  top: 500px;
+  top: 700px;
   background-color: #fff;
   padding-top: 50px;   
   margin-right: auto;
@@ -20,7 +20,7 @@ body {
   background-color: #fff;
   height: auto;
   position: relative;  
-  max-width: 1024px;
+  max-width: 100%;
   z-index: 200; 
   margin-right: auto;
   margin-left: auto; 
@@ -61,8 +61,8 @@ header {
   right: 0;
   left: 0;
   z-index: 2;
-  min-height: 500px;
-  max-width: 90%;
+  min-height: 700px;
+  max-width: 101%;
   margin-right: auto;
   margin-left: auto; 
 }
@@ -70,9 +70,11 @@ header {
 header img {  
   top: 200px;
   height: auto;
-  width: 60%;  
+  width: 50%;  
   padding-bottom: 1.3em;
   padding-top: .5em;
+  padding-right: 15px;
+  padding-left: 15px;
   position: relative;  
   max-width: 750px;
   min-width: 275px;
@@ -166,8 +168,7 @@ footer hr {
 
 section hr {
   color: #272932;
-  border-color: #272932;
-  max-width: 920px;
+  border-color: #272932;  
   margin-left: auto;
   margin-right: auto;
 }
@@ -270,5 +271,17 @@ a.back-to-top {
   border-radius: 30px;
 }
 
+/***************** Portfolio logos *****************/
+.portfolio-logos {
+  padding-top: 60px;  
+}
 
+
+/***************** Skill icon section *****************/
+.skillIcons{
+  font-size: 100px;
+  color: #272932;
+  background-color: #0f7173;
+  padding-top: 20px; 
+}
 
